"First commit and explanation on how to create a new repository from Overleaf."

--- a/main.tex
+++ b/main.tex
@@ -21,7 +21,8 @@ In case you want to version control a text document with GitHub, follow this tut
 
 \begin{enumerate}
     \item Make a new project in Overleaf.
-    \item Choose the GitHub option in the menu and choose "Create a GitHub repository."
+    \item Choose the GitHub option in the menu and choose "Create a GitHub repository". Choose a name and add a description if wanted.
+    \item Choose the GitHub option in the menu and choose "Push Overleaf changes to GitHub".
 \end{enumerate}
 
 \end{document}
