Explanation on how to commit and push changes from Overleaf.

--- a/main.tex
+++ b/main.tex
@@ -23,6 +23,28 @@ In case you want to version control a text document with GitHub, follow this tut
     \item Make a new project in Overleaf.
     \item Choose the GitHub option in the menu and choose "Create a GitHub repository". Choose a name and add a description if wanted.
     \item Choose the GitHub option in the menu and choose "Push Overleaf changes to GitHub".
+    \item Switch to your GitHub account and check if everything showed up correctly.
+    \item Open a terminal on your computer, create and navigate to the folder in which you want to clone the repository.
+    \item Obtain the url to the repository on the GitHub page under "Clone or download" and write the following lines in the terminal: 
+    \begin{verbatim}
+    git clone <url-to-github-repository> <folder>    
+    \end{verbatim}
+    (If no folder is specified, it will take the repository name as default name.)
+\end{enumerate}
+
+\subsubsection{Starting on GitHub}
+
+\subsubsection{Starting on your PC/Mac}
+
+\section{Maintaining the code}
+
+Before committing new code, always make sure to update your local version from origin first!
+
+\subsubsection{From Overleaf}
+
+\begin{enumerate}
+    \item Make your changes and save with Ctrl + s / Cmd + s.
+    \item Choose the GitHub option in the menue and choose "Push Overleaf changes to GitHub". Write a comment and commit.
 \end{enumerate}
 
 \end{document}
