How to pull changes from GitHub to Overleaf.

--- a/main.tex
+++ b/main.tex
@@ -44,6 +44,7 @@ Before committing new code, always make sure to update your local version from o
 
 \begin{enumerate}
     \item Make your changes and save with Ctrl + s / Cmd + s.
+    \item Update your Overleaf repository from origin by choosing the GitHuboption in the menu and choosing "Pull GitHub changes into Overleaf".
     \item Choose the GitHub option in the menue and choose "Push Overleaf changes to GitHub". Write a comment and commit.
 \end{enumerate}
 
