How to change user names and email addresses on your PC/Mac.

--- a/main.tex
+++ b/main.tex
@@ -14,6 +14,21 @@ This document contains some helpful commands that can be used in git.
 
 \section{Setup}
 
+\subsection{General settings}
+
+\subsubsection{Changing the user and their options}
+
+On your PC/Mac:
+\begin{verbatim}
+	git config --global user.email "email@example.com" \newline
+	got config --global user.name "John Doe"
+\end{verbatim}
+You can check that everything has been set correctly by typing
+\begin{verbatim}
+	got config --global user.name
+\end{verbatim}
+
+
 \subsection{Cross-platform text documents}
 In case you want to version control a text document with GitHub, follow this tutorial.
 
