How to change user name and email address in Overleaf and GitHub.

--- a/main.tex
+++ b/main.tex
@@ -27,6 +27,14 @@ You can check that everything has been set correctly by typing
 \begin{verbatim}
 	got config --global user.name
 \end{verbatim}
+\\
+
+On Overleaf:
+Go to Account\textgreater  Account Settings and add the email address. Confirm the address by opening the email that you received in your mailbox.
+\\
+
+On GitHub:
+Go to Settings\textgreater  Emails and add the email address. Confirm the address by opening the email that you received in your mailbox. Choose a primary email address(, which is the one that is going to show up in your commits). OBS: Make sure that you did not mark the "Keep my email address private"-option. The name (that will actually show up in your commits) can be changed in your GitHub profile.
 
 
 \subsection{Cross-platform text documents}
