Explanation on .gitignore.

--- a/main.tex
+++ b/main.tex
@@ -36,6 +36,8 @@ Go to Account\textgreater  Account Settings and add the email address. Confirm t
 On GitHub:
 Go to Settings\textgreater  Emails and add the email address. Confirm the address by opening the email that you received in your mailbox. Choose a primary email address(, which is the one that is going to show up in your commits). OBS: Make sure that you did not mark the "Keep my email address private"-option. The name (that will actually show up in your commits) can be changed in your GitHub profile.
 
+\subsubsection{.gitignore}
+In many cases, you will have files in your local repository that you do not want to have committed because they are not useful, they are experimental or too big. In those cases you might want to create a .gitignore file in your folder and commit it to the repository. Git will know automatically that all the fiels that are listed in the .gitignore file are not supposed to be tracked for changes.
 
 \subsection{Cross-platform text documents}
 In case you want to version control a text document with GitHub, follow this tutorial.
