Added general workflow descriptions with different starting points.

--- a/main.tex
+++ b/main.tex
@@ -44,6 +44,8 @@ In many cases, you will have files in your local repository that you do not want
 In case you want to version control a text document with GitHub, follow this tutorial.
 
 \subsubsection{Starting in Overleaf}
+Start in Overleaf, then push it to GitHub, and download from GitHub to your computer
+(Overleaf \rightarrow GitHub \rightarrow PC/Mac).
 
 \begin{enumerate}
     \item Make a new project in Overleaf.
@@ -59,8 +61,12 @@ git clone <path/to/github/repository> <folder>
 \end{enumerate}
 
 \subsubsection{Starting on GitHub}
+Start on GitHub, then pull it from Overleaf and your PC/Mac
+(Overleaf \leftarrow GitHub \rightarrow PC/Mac).
 
 \subsubsection{Starting on your PC/Mac}
+Start on your PC/Mac, then push to GitHub, and pull it from GitHub from Overleaf
+(PC/Mac \rightarrow GitHub \rightarrow Overleaf).
 
 \section{Maintaining the code}
 
