Linked tutorial explaining how to link a repository on your PC/Mac from an existing remote to a new remote.

--- a/main.tex
+++ b/main.tex
@@ -88,6 +88,8 @@ git push --tags origin
     \end{verbatim}
 \end{enumerate}
 
+(If you want to migrate a repository from an existing remote to a new remote, checkout the following tutorial: https://gist.github.com/niksumeiko/8972566.)
+
 \section{Maintaining the code}
 
 Before committing new code, always make sure to update your local version from origin first!
