Included explanation on how to import a repository to Overleaf from GitHub.

--- a/main.tex
+++ b/main.tex
@@ -64,6 +64,11 @@ git clone <path/to/github/repository> <folder>
 Start on GitHub, then pull it from Overleaf and your PC/Mac
 (Overleaf \leftarrow GitHub \rightarrow PC/Mac).
 
+\begin{enumerate}
+    \item Go to Overleaf and chose "Import from GitHub" under "New Project".
+    \item Choose the repository you want to import.
+\end{enumerate}
+
 \subsubsection{Starting on your PC/Mac}
 Start on your PC/Mac, then push to GitHub, and pull it from GitHub from Overleaf
 (PC/Mac \rightarrow GitHub \rightarrow Overleaf).
@@ -86,6 +91,8 @@ git remote add origin <url-to-repository>
 git push --all origin
 git push --tags origin
     \end{verbatim}
+    \item Go to Overleaf and chose "Import from GitHub" under "New Project".
+    \item Choose the repository you want to import.
 \end{enumerate}
 
 (If you want to migrate a repository from an existing remote to a new remote, checkout the following tutorial: https://gist.github.com/niksumeiko/8972566.)
