Compiled the document on Mac/PC with texmaker and updated .gitignore file.

--- a/main.tex
+++ b/main.tex
@@ -45,7 +45,7 @@ In case you want to version control a text document with GitHub, follow this tut
 
 \subsubsection{Starting in Overleaf}
 Start in Overleaf, then push it to GitHub, and download from GitHub to your computer
-(Overleaf \rightarrow GitHub \rightarrow PC/Mac).
+($Overleaf \rightarrow GitHub \rightarrow PC/Mac$).
 
 \begin{enumerate}
     \item Make a new project in Overleaf.
@@ -62,7 +62,7 @@ git clone <path/to/github/repository> <folder>
 
 \subsubsection{Starting on GitHub}
 Start on GitHub, then pull it from Overleaf and your PC/Mac
-(Overleaf \leftarrow GitHub \rightarrow PC/Mac).
+($Overleaf \leftarrow GitHub \rightarrow PC/Mac$).
 
 \begin{enumerate}
     \item Make a new repository on GitHub.
@@ -87,7 +87,7 @@ git clone <url-to-repository> <path/name/of/folder>
 
 \subsubsection{Starting on your PC/Mac}
 Start on your PC/Mac, then push to GitHub, and pull it from GitHub from Overleaf
-(PC/Mac \rightarrow GitHub \rightarrow Overleaf).
+($PC/Mac \rightarrow GitHub \rightarrow Overleaf$).
 
 \begin{enumerate}
     \item Create a new project on you PC/Mac:
