Corrected wrong enumerate tag.

--- a/main.tex
+++ b/main.tex
@@ -234,7 +234,7 @@ Please commit your changes or stash them before you merge.
 Aborting
 \end{verbatim}
 We can solve it by the following simple steps:
-\begin{enuemrate}
+\begin{enumerate}
     \item Save the local changes:
     \begin{verbatim}
 git pull
@@ -252,7 +252,7 @@ git stash pop
 git mergetool
     \end{verbatim}
     \item Commit and push your changes to the repository.
-\end{enuemrate}
+\end{enumerate}
 
 \section{Branches}
 Branches can be helpful when we have a main project, from which we derive minor side projects. A branch can stand by itself or merged again with the main branch ($master$).
